fixed scroll bahavior in week container, and add hasCollapse props

--- a/diary-front/src/components/EntryModule/EntryWeekContainer.css
+++ b/diary-front/src/components/EntryModule/EntryWeekContainer.css
@@ -1,11 +1,17 @@
 .EntryDaysDiv {
   display: flex;
   justify-content: space-between;
-  overflow: scroll;
+  overflow: visible;
+  padding: 16px 18px;
 }
 
 .EntryWeekContainer > .ant-collapse
 .ant-collapse-content-box {
   max-height: 600px;
   overflow: scroll;
+  padding: 0;
+}
+
+.EntryWeekContainer > .ant-collapse > .ant-collapse-item > .ant-collapse-content {
+  padding: 0;
 }
